--- a/app/src/main/res/layout/activity_apply.xml
+++ b/app/src/main/res/layout/activity_apply.xml
@@ -10,65 +10,65 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <EditText
-        android:textSize="18sp"
-        android:inputType="textPersonName"
-        android:padding="16dp"
-        android:fontFamily="@font/vegur_bold"
-        android:id="@+id/nameEt"
-        android:hint="@string/nameEt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/nameEt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/vegur_bold"
+            android:hint="@string/nameEt"
+            android:inputType="textPersonName"
+            android:padding="16dp"
+            android:textSize="18sp" />
 
-    <EditText
-        android:textSize="18sp"
-        android:inputType="phone"
-        android:padding="16dp"
-        android:fontFamily="@font/vegur_bold"
-        android:id="@+id/phoneEt"
-        android:hint="@string/phoneEt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/phoneEt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/vegur_bold"
+            android:hint="@string/phoneEt"
+            android:inputType="phone"
+            android:padding="16dp"
+            android:textSize="18sp" />
 
-    <EditText
-        android:textSize="18sp"
-        android:inputType="textEmailAddress"
-        android:padding="16dp"
-        android:fontFamily="@font/vegur_bold"
-        android:id="@+id/mailEt"
-        android:hint="@string/mailEt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/mailEt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/vegur_bold"
+            android:hint="@string/mailEt"
+            android:inputType="textEmailAddress"
+            android:padding="16dp"
+            android:textSize="18sp" />
 
-    <TextView
-        android:padding="16dp"
-        android:id="@+id/interestareaEt"
-        android:fontFamily="@font/vegur_bold"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/interestareaEt"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/interestAreaEt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/vegur_bold"
+            android:padding="16dp"
+            android:text="@string/interestareaEt"
+            android:textSize="18sp" />
 
-    <Spinner
-        android:id="@+id/interestareaDd"
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginBottom="16dp"
-        android:paddingEnd="20dp"
-        android:paddingStart="20dp"
-        android:scrollbarSize="18dp"
-        android:textSize="18sp">
+        <Spinner
+            android:id="@+id/interestAreaDd"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:layout_marginBottom="16dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:scrollbarSize="18dp"
+            android:textSize="18sp">
 
-    </Spinner>
+        </Spinner>
 
-    <Button
-        android:textSize="18sp"
-        android:fontFamily="@font/vegur_bold"
-        android:id="@+id/sendBt"
-        android:text="@string/sendBt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/sendBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/vegur_bold"
+            android:text="@string/sendBt"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
