--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,29 +6,31 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/background"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/background"
+        android:id="@+id/backgroundIv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ImageView
-        android:id="@+id/pingonicon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="28dp"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/main_activity_backgorund" />
+
+    <ImageView
+        android:id="@+id/pingonIcn"
+        android:layout_width="140dp"
+        android:layout_height="129dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
         android:padding="20dp"
         android:src="@mipmap/pingon_icon" />
 
     <TextView
-        android:id="@+id/texttitle"
+        android:id="@+id/titleTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="43dp"
-        android:layout_toEndOf="@+id/pingonicon"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="144dp"
         android:fontFamily="@font/vegur_bold"
         android:padding="8dp"
         android:text="@string/app_title"
