--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -41,10 +41,10 @@
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
-                android:textAlignment="gravity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title_activity_platforms" />
+                android:text="@string/title_activity_platforms"
+                android:textAlignment="gravity" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem3"
